--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -4,8 +4,6 @@
     <string name="icon_star">Ikon Bintang</string>
     <string name="movie_poster">Poster Film</string>
     <string name="released_date">Tanggal Dirilis</string>
-    <string name="director">Direktur</string>
-    <string name="actors">Aktor</string>
     <string name="title_movies">Film</string>
     <string name="title_tv_show">Acara TV</string>
     <string name="overview">Ikhtisar</string>
@@ -17,4 +15,7 @@
     <string name="movies_not_available">Film tidak tersedia</string>
     <string name="failed_load_tv_show">Gagal memuat tv show</string>
     <string name="tv_show_not_available">Tv show tidak tersedia</string>
+    <string name="genres">Kategori</string>
+    <string name="productions">Produksi</string>
+    <string name="icon_back">Ikon kembali</string>
 </resources>
