--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,6 @@
     <string name="icon_star">Icon Star</string>
     <string name="movie_poster">Movie Poster</string>
     <string name="released_date">Released Date</string>
-    <string name="director">Director</string>
-    <string name="actors">Actors</string>
     <string name="title_movies">Movies</string>
     <string name="title_tv_show">TV Show</string>
     <string name="overview">Overview</string>
@@ -16,4 +14,7 @@
     <string name="movies_not_available">Movies not available</string>
     <string name="failed_load_tv_show">Failed load tv show</string>
     <string name="tv_show_not_available">Tv show not available</string>
+    <string name="genres">Genres</string>
+    <string name="productions">Productions</string>
+    <string name="icon_back">Icon back</string>
 </resources>
