--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_search">Search ...</string>
     <string name="msg_daily_reminder">Hai, yuk buka aplikasi Movie App</string>
     <string name="title_widget_favorite">Favorite Movies</string>
+    <string name="msg_widget_empty_favorites">Empty Favorite Movies</string>
 </resources>
